--- a/styles.css
+++ b/styles.css
@@ -82,6 +82,7 @@ nav {
     text-decoration: underline;
     text-underline-offset: 50%;
     color:#5e0df6;
+    transition: all 300ms ease-in-out;
 }
 
 .nav__links {
@@ -109,6 +110,7 @@ nav {
     color:#6f2befb0;
     background-color: #4604c0ee;
     text-decoration: none;
+    transition: all 300ms ease-in-out;
 }
 
 /* 
@@ -175,6 +177,7 @@ header {
 
 .header__email:hover {
     border: 2px solid;
+    transition: all 300ms ease-in-out;
 }
 
 .header__email--input {
@@ -197,6 +200,7 @@ header {
 .header__email--btn:hover {
     background-color:#3a0996;
     cursor: pointer;
+    transition: all 300ms ease-in-out;
 }
 
 .header__customers--title {
@@ -231,6 +235,16 @@ header {
     margin-top: 30px;
     margin-left: 120px;
 }   
+
+.header__blob {
+    position: absolute;
+    left: 0;
+    bottom: -30%;
+    opacity: 0.05;
+    width: 256px;
+    height: 256px;
+    transform: matrix(1.5, 0, 0, 1.3, -163, 0);
+}
 
 
 /*
@@ -323,6 +337,16 @@ FEATURES
     color: rgba(88, 99, 148, 0.833);
 }
 
+.features__blob {
+    transform: translateX(96px) translateY(192px) scaleX(1) scaleY(1);
+    position: absolute;
+    right: 0px;
+    bottom: -1000px;
+    width: 16rem;
+    opacity: 0.25;
+    padding: 16px;
+}
+
 /*
 
 QUALITY
@@ -372,6 +396,7 @@ QUALITY
 .quality__btn:hover {
     background-color:rgb(77, 18, 194);
     cursor: pointer;
+    transition: all 300ms ease-in-out;
 }
 
 .quality__img--wrapper {
@@ -386,6 +411,21 @@ QUALITY
     width: 100%;
     max-width: 600px;
     height: 360px;
+    z-index: 1;
+}
+
+.quality__grid {
+    transform: translateX(50%) translateY(50%) scaleX(1) scaleY(1);
+    width: 80px;
+    height: 80px;
+    position: absolute;
+    right: 80px;
+    bottom: -1450px;
+    fill: rgb(100, 21, 255);
+    --tw-text-opacity: 1;
+    color: rgba(100, 21, 255, var(--tw-text-opacity));
+    z-index: 0;
+    display: block;
 }
 
 /*
@@ -413,6 +453,19 @@ STEPS
 .steps__img {
     max-width: 600px;
     padding-top: 100px;
+}
+
+.steps__grid {
+    position: absolute;
+    opacity: 0.15;
+    right: 0;
+    bottom: -2170px;
+    left: 27%;
+    transform: translateX(-50%) translateY(50%) scaleX(1) scaleY(1);
+    width: 80px;
+    height: 80px;
+    fill: rgba(100, 21, 255);
+    z-index: 1;
 }
 
 .steps__container {
@@ -503,7 +556,7 @@ VALUES
     font-size: 18px;
 }
 
-.value__paras{
+.value__paras {
     color:rgb(139, 144, 164);
     width: 100%;
     line-height: 1.5;
@@ -613,8 +666,8 @@ PRICING
     padding: 60px 0px;
     width: 100%;
     max-width: 1800px;
-   
 }
+
 
 
 .basic__top,
@@ -630,7 +683,7 @@ PRICING
 }
 
 .basic__plan {
-    position:relative
+    position:relative;
 }
 
 .basic__stripe {
@@ -884,6 +937,17 @@ PRICING
     cursor: pointer;
 }
 
+.plans__blob {
+    z-index: -10;
+    position: absolute;
+    left: 0;
+    bottom: -4200px;
+    transform: translateX(-40%) translateY(50%) scaleX(1) scaleY(1);
+    height: 256px;
+    width: 256px;
+    opacity: 0.25;
+}
+
 /*
 
 TESTIMONIALS
@@ -947,7 +1011,7 @@ TESTIMONIALS
     font-weight: 600;
 }
 
-.test__stars {
+.test__stars i {
     color: #fabf2a;
     margin-bottom: 16px;
 }
@@ -1007,18 +1071,29 @@ TESTIMONIALS
 
 .review__button {
     border: none;
-    padding: 16px;
-    border-radius: 50%;
-    margin: 12px;
+    padding: 18px;
+    border-radius: 100%;
+    margin: 8px;
+}
+
+.review__button i {
+    color:#5e0df6;
 }
 
 .review__button:hover {
     background-color: rgba(192, 184, 184, 0.502);
     cursor: pointer;
+    transition: all 300ms ease-in-out;
 }
 
 .button__line {
     display: flex;
+    justify-content: center;
+}
+
+.arrow__line {
+    opacity: 30%;
+    margin: 24px 0;
 }
 
 /*
@@ -1032,9 +1107,30 @@ GET STARTED
     margin-bottom: 150px;
 }
 
+.start__blob--1 {
+    position: absolute;
+    bottom: -5470px;
+    left: 30px;
+    transform: translateX(-80px) translateY(128px) scaleX(1) scaleY(1);
+    width: 320px;
+    height: 320px;
+    z-index: 2;
+    opacity: 0.5;
+}
+
+.start__blob--2 {
+    position: absolute;
+    top: -5000;
+    right: 0;
+    transform: translateX(80px) translateY(-256px);
+    width: 320px;
+    height: 320px;
+    z-index: 1;
+    opacity: 0.5;
+}
+
 .start__row {
     display: flex;
-
 }
 
 .start__box {
@@ -1108,6 +1204,28 @@ a:hover {
     cursor: pointer;
 }
 
+.footer__blob--1 {
+    position: absolute;
+    top: 3;
+    left: 0px;
+    width: 320px;
+    height: 320px;
+    transform: translateX(-80px) translateY(-165px);
+    z-index: 1;
+    opacity: 0.5;
+}
+
+.footer__blob--2 {
+    position: absolute;
+    bottom: 3;
+    right: 0;
+    width: 320px;
+    height: 320px;
+    transform: translateX(128px) translateY(365px);
+    z-index: 1;
+    opacity: 0.5;
+}
+
 .footer__row {
     width: 100%;
     max-width: 1800px;
@@ -1174,6 +1292,11 @@ a:hover {
     background-color: white;
     margin-right: 16px;
     border-radius: 100%;
+}
+
+.social__link:hover {
+    background-color:rgba(191, 193, 195, 0.9);
+    cursor: pointer;
 }
 
 hr {
