--- a/styles.css
+++ b/styles.css
@@ -410,7 +410,8 @@ QUALITY
 .quality__img {
     width: 100%;
     max-width: 600px;
-    height: 360px;
+    height: 380px;
+    position: relative;
     z-index: 1;
 }
 
@@ -453,6 +454,8 @@ STEPS
 .steps__img {
     max-width: 600px;
     padding-top: 100px;
+    position: relative;
+    z-index: 2;
 }
 
 .steps__grid {
@@ -935,6 +938,10 @@ PRICING
     box-shadow: 0 8px 24px rgba(0, 0, 0, 0.25);
     transition: all 300ms ease-in-out; 
     cursor: pointer;
+}
+
+.basic__bottom {
+    position: relative;
 }
 
 .plans__blob {
