--- a/styles.css
+++ b/styles.css
@@ -129,6 +129,7 @@ header {
     padding: 46px 32px;
     margin: 0 auto;
     display: flex;
+    position: relative;
 
 }
 
@@ -208,6 +209,7 @@ header {
     font-weight: 600;
     color: rgba(128, 132, 157, 0.767);
     margin-bottom: 8px;
+    z-index: 1;
 }
 
 .header__customers {
@@ -216,6 +218,7 @@ header {
     max-width: 450px;
     filter: grayscale(1) invert(1);
     opacity: 60%;
+    z-index: 1;
 }
 
 .header__img--wrapper { 
@@ -244,6 +247,7 @@ header {
     width: 256px;
     height: 256px;
     transform: matrix(1.5, 0, 0, 1.3, -163, 0);
+    z-index: 0;
 }
 
 
@@ -672,7 +676,6 @@ PRICING
 }
 
 
-
 .basic__top,
 .basic__middle,
 .basic__bottom  {
@@ -683,10 +686,12 @@ PRICING
     justify-content: center;
     align-content: center;
     align-items: center;
+    background-color: white;
 }
 
 .basic__plan {
-    position:relative;
+    position: relative;
+    z-index: 1;
 }
 
 .basic__stripe {
@@ -940,12 +945,8 @@ PRICING
     cursor: pointer;
 }
 
-.basic__bottom {
-    position: relative;
-}
-
 .plans__blob {
-    z-index: -10;
+    z-index: 0;
     position: absolute;
     left: 0;
     bottom: -4200px;
@@ -1116,18 +1117,18 @@ GET STARTED
 
 .start__blob--1 {
     position: absolute;
-    bottom: -5470px;
+    bottom: 0px;
     left: 30px;
     transform: translateX(-80px) translateY(128px) scaleX(1) scaleY(1);
     width: 320px;
     height: 320px;
-    z-index: 2;
+    z-index: 1;
     opacity: 0.5;
 }
 
 .start__blob--2 {
     position: absolute;
-    top: -5000;
+    top: 0;
     right: 0;
     transform: translateX(80px) translateY(-256px);
     width: 320px;
@@ -1138,6 +1139,8 @@ GET STARTED
 
 .start__row {
     display: flex;
+    position: relative;
+    overflow:hidden;
 }
 
 .start__box {
@@ -1148,6 +1151,7 @@ GET STARTED
     display: flex;
     justify-content: space-between;
     border-radius: 10px;
+    
 }
 
 .start__title {
@@ -1156,6 +1160,7 @@ GET STARTED
     color: white;
     font-weight: 700;
     line-height: 1.5;
+    z-index: 2;
 }
 
 .start__button {
@@ -1220,6 +1225,7 @@ a:hover {
     transform: translateX(-80px) translateY(-165px);
     z-index: 1;
     opacity: 0.5;
+    z-index: 0;
 }
 
 .footer__blob--2 {
@@ -1231,6 +1237,7 @@ a:hover {
     transform: translateX(128px) translateY(365px);
     z-index: 1;
     opacity: 0.5;
+    z-index: 0;
 }
 
 .footer__row {
@@ -1239,6 +1246,12 @@ a:hover {
     height: 520px;
     background-color:#5e0df6;
     padding: 30px;
+    position: relative;
+    overflow: hidden;
+}
+
+.footer__column {
+    z-index: 1;
 }
 
 .footer__columns {
@@ -1252,6 +1265,7 @@ a:hover {
     font-size: 18px;
     color: white;
     font-weight: bold;
+    z-index: 1;
 }
 
 .footer__rows {
@@ -1299,6 +1313,7 @@ a:hover {
     background-color: white;
     margin-right: 16px;
     border-radius: 100%;
+    position: relative;
 }
 
 .social__link:hover {
