--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 * {
     padding: 0;
     margin: 0;
@@ -13,6 +14,7 @@ html {
 body {
     max-width: 1800px;
     width: 100%;
+    overflow-x: hidden;
 }
 
 .purple {
@@ -113,6 +115,66 @@ nav {
     transition: all 300ms ease-in-out;
 }
 
+
+.btn__menu {
+    background-color: transparent;
+    font-size: 40px;
+    text-align: center;
+    border: none;
+    color: green;
+    display: none;
+}
+
+.menu__backdrop {
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.934);
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    z-index: 100;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    visibility: hidden;
+    transition: all 300ms ease;
+    
+}
+
+.menu--open .menu__backdrop {
+    visibility: visible;
+    opacity: 1;
+}
+
+.menu--open {
+    max-height: 100vh;
+    overflow-y: hidden;
+}
+
+.menu__links { 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.menu__list { 
+    padding: 32px 0;
+}
+
+.menu__link {
+    color: white;
+    font-size: 40px;
+}
+
+.btn__menu--close {
+    position: absolute;
+    right: 20px;
+    top: 10px;
+    padding: 8px;
+    color: white;
+}
+
 /* 
 
 HEADER
@@ -120,7 +182,7 @@ HEADER
 */
 
 header {
-    height: calc(100vh - 80px);
+    height: calc(100%);
 }
 
 .header__container {
@@ -130,6 +192,7 @@ header {
     margin: 0 auto;
     display: flex;
     position: relative;
+    height: 100%;
 
 }
 
@@ -137,11 +200,9 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 100vh;
-    margin: 16px;
+    height: 100%;
     width: 100%;
     max-width: 1800px;
-    margin: 0 auto;
 }
 
 .header__description {
@@ -242,7 +303,7 @@ header {
 .header__blob {
     position: absolute;
     left: 0;
-    bottom: -30%;
+    bottom: -15%;
     opacity: 0.05;
     width: 256px;
     height: 256px;
@@ -258,7 +319,7 @@ FEATURES
 */
 
 #features {
-    padding-top: 180px;
+    padding-top: 100px;
 }
 
 .feature__container {
@@ -268,11 +329,10 @@ FEATURES
 .feature__row {
     width: 100%;
     max-width: 1800px;
-    margin: 0 auto;
     height: 100%;
-    max-height: 1100px;
+    max-height: 1200px;
     display: flex;
-    flex-direction:column;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
@@ -290,6 +350,7 @@ FEATURES
     font-weight: 900;
     width: 700px;
     margin-bottom: 32px;
+    text-align: center;
 }
 
 .feature__para {
@@ -299,6 +360,7 @@ FEATURES
     font-weight: 600;
     font-size: 18px;
     margin-bottom: 58px;
+    text-align: center;
 }
 
 .features {
@@ -345,7 +407,7 @@ FEATURES
     transform: translateX(96px) translateY(192px) scaleX(1) scaleY(1);
     position: absolute;
     right: 0px;
-    bottom: -1000px;
+    bottom: -850px;
     width: 16rem;
     opacity: 0.25;
     padding: 16px;
@@ -374,9 +436,13 @@ QUALITY
 }
 
 .quality__title {
-    width: 500px;
     line-height: 1.3;
-    color:rgb(53, 60, 105)
+    color:rgb(53, 60, 105);
+    font-size: 48px;
+    font-weight: 900;
+    width: 470px;
+    letter-spacing: 3px;
+    margin-bottom: 32px;
 }
    
 .quality__para {
@@ -425,7 +491,7 @@ QUALITY
     height: 80px;
     position: absolute;
     right: 80px;
-    bottom: -1450px;
+    bottom: -1360px;
     fill: rgb(100, 21, 255);
     --tw-text-opacity: 1;
     color: rgba(100, 21, 255, var(--tw-text-opacity));
@@ -440,7 +506,7 @@ STEPS
 */
 
 .steps__container {
-    padding: 32px;
+    padding: 48px;
     margin-bottom: 68px;
 }
 
@@ -457,7 +523,7 @@ STEPS
 
 .steps__img {
     max-width: 600px;
-    padding-top: 100px;
+    padding-top: 70px;
     position: relative;
     z-index: 2;
 }
@@ -466,7 +532,7 @@ STEPS
     position: absolute;
     opacity: 0.15;
     right: 0;
-    bottom: -2170px;
+    bottom: -2050px;
     left: 27%;
     transform: translateX(-50%) translateY(50%) scaleX(1) scaleY(1);
     width: 80px;
@@ -475,10 +541,10 @@ STEPS
     z-index: 1;
 }
 
-.steps__container {
+.step__container {
     display: flex;
     flex-direction: column;
-    padding-left: 40px;
+    padding-left: 80px;
 }
 
 .steps__title {
@@ -540,7 +606,7 @@ VALUES
     display: flex;
 }
 
-.values__title { 
+.values__title--box { 
     display: flex;
     flex-direction: column;
     width: 50%;
@@ -548,8 +614,8 @@ VALUES
     padding: 8px;
 }
 
-.section__title {
-    font-size: 45px;
+.values__title {
+    font-size: 48px;
     font-weight: 900;
     width: 500px;
     margin-bottom: 32px;
@@ -657,6 +723,7 @@ PRICING
     width: 65%;
     margin-bottom: 32px;
     color: rgb(40, 50, 97);
+    text-align: center;
 }
 
 .pricing__para {
@@ -664,6 +731,7 @@ PRICING
    color:rgb(139, 144, 164);
    width: 45%;
    line-height: 1.5;
+   text-align: center;
 }
 
 .plans {
@@ -949,7 +1017,7 @@ PRICING
     z-index: 0;
     position: absolute;
     left: 0;
-    bottom: -4200px;
+    bottom: -3980px;
     transform: translateX(-40%) translateY(50%) scaleX(1) scaleY(1);
     height: 256px;
     width: 256px;
@@ -1323,4 +1391,96 @@ a:hover {
 
 hr {
  opacity: 50%;
+}
+
+/* SMALL PHONES, TABLETS, LARGE SMARTPHONES */
+
+
+@media (max-width: 768px) {
+    .btn__menu {
+        display: block;
+        padding: 24px;
+    }
+
+    .nav__links {
+        display: none;
+    }
+
+    .header__row {
+        display: block;
+        margin-top: 62px;
+    }
+
+    .header__description {
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .header__description--para {
+        width: 70%;
+        font-size: 14px;
+    }
+
+    h1 { 
+        font-size: 30px;
+    }
+
+    .header__img--wrapper {
+        width: 100%;
+    }
+
+    .feature__para {
+        width: 100%;
+    }
+
+    .features {
+        display: block;
+    }
+
+    .feature {
+        width: 75%;
+    }
+
+    .feature:last-child {
+        margin-bottom: 502px;
+    }
+
+    .quality__row {
+        display: block;
+    }
+
+    .steps__row {
+        display: block;
+    }
+
+    .steps__list,
+    .steps__title,
+    .step__container {
+        justify-content: center;
+        align-items: center;
+    }
+
+    .steps__title {
+        font-size: 46px;
+        margin: 0 auto;
+        }
+
+    .step__number {
+        width: 240px;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .step {
+        width: 400px;
+        height: 150px;
+        display: block;
+    }
+
+    .step__description {
+        justify-content: center;
+        align-items: center;
+    }
+
 }
