--- a/styles.css
+++ b/styles.css
@@ -253,7 +253,6 @@ header {
 }
 
 .header__email--input {
-    color: rgba(227, 223, 223, 0.767);
     border: none;
     font-size: 16px;
 }
@@ -1701,7 +1700,7 @@ hr {
 
     .quality__row,
     .values__row {
-        flex-direction:column-reverse
+        flex-direction: column-reverse;
     }
 
     .quality__container {
@@ -1711,7 +1710,6 @@ hr {
     .quality__img--wrapper,
     .quality__description {
         width: 100%;
-        max-width: 450px;
         max-height: fit-content;
     }
 
@@ -1930,7 +1928,278 @@ hr {
     /* SMALL PHONES AND LARGE SMART PHONES */
 
 @media (max-width: 550px) {
+    .header__description--para {
+        font-size: 17px;
+        padding: 12px 0;
+    }
 
-    
+    .header__email {
+        flex-direction: column;
+        border: none;
+        height: auto;
+    }
+
+    .header__email--input {
+        border: 2px solid rgba(227, 223, 223, 0.767);
+        border-radius: 68px;
+        padding: 5px 5px 5px 32px;
+        height: 58px;
+        margin-bottom: 16px;
+    }
+
+    .header__email:hover {
+        border: none;
+    }
+
+    .header__email--input:hover {
+        border: 2px solid rgba(154, 153, 153, 0.635);
+        transition: all 300ms ease-in-out;
+    }
+
+    .feature__container {
+        margin-top: 450px;
+        line-height: 1;
+    }
+
+    .feature__title{
+        font-size: 40px;
+        margin-bottom: 14px;
+    }
+
+    .features {
+        padding-top: 44px;
+        padding-left: 0px;
+    }
+
+    .feature__para {
+        font-size: 15px;
+        width: 470px;
+        margin: 0;
+        font-weight: normal;
+    }
+
+    .feature {
+        display: block;
+    }
+
+    .feature__img {
+        margin-left: 135px;
+    }
+    .feature__boxes {
+        text-align: center;
+        width: 340px;
+    }
+
+    .quality__description, 
+    .quality__img--wrapper,
+    .quality__container {
+        width: 100%;
+        max-width: fit-content;
+        margin: 16px 0;
+        padding: 42px 42px;
+    }
+
+    .quality__description {
+        padding-left: 0;
+        height: 300px;
+    }
+
+    .quality__img {
+        margin: 0;
+        width: 100%;
+        height: auto;
+    }
+
+    .quality__title {
+        font-size: 34px;
+        letter-spacing: normal;
+        margin-left: 20px;
+    }
+
+    .quality__para {
+        width: 450px;
+        font-size: 14px;
+    }
+
+    .step__container {
+        margin-left: 0;
+        padding-left: 0;
+    }
+
+    .steps__img--wrapper {
+        width: 100%;
+        max-width: 550px;
+        padding-left: 0;
+    }
+
+    .steps__img {
+        width: 100%;
+        max-width: 450px;
+        margin-top: 24px;
+    }
+
+    .steps__title {
+        font-size: 34px;
+        margin-left: 64px;
+    }
+    .step__para {
+      text-align: center;
+      width: 300px;
+      margin-left: 50px;
+    }
+
+    .values__container {
+        padding: 28px;
+    }
+
+    .value__boxes {
+        padding: 16px;
+    }
+
+    .quality__btn.value__btn {
+        margin: 0;
+    }
+
+    .price__title {
+        font-size: 38px;
+        width: 100%;
+        margin: 16px;
+        margin-top: 0;
+    }
+
+    .pricing__para {
+        width: 100%;
+    }
+
+    .plans {
+        padding-left: 50px;
+    }
+
+    .test__img {
+        margin-left: 40px;
+        width: 450px;
+    }
+
+    .test__img--wrapper {
+        height: 320px;
+    }
+
+    .test__description {
+        width: 90%;
+        padding-left: 40px;
+        margin-top: 0;
+    }
+
+    .test__label {
+        padding-bottom: 0;
+    }
+
+    .test__para,
+    .review__para {
+        width: 100%;
+        max-width: 568px;
+        line-height: 1.8;
+    }
+
+    .review__para {
+        font-size: 16px;
+    }
+
+    .test__para {
+        margin-bottom: 32px;
+    }
+
+    .test__title {
+        font-size: 32px;
+        padding-top: 0;
+    }
+
+    .test__reviewer,
+    .reviewer {
+        display: block;
+        width: fit-content;
+    }
+
+    .review__img {
+        padding: 8px;
+    }
+
+    .reviewer__img {
+        margin-left: 16px;
+    }
+
+    .reviewer__title {
+        font-size: 17px;
+        text-align: center;
+    }
+
+    .reviewer__name {
+        text-align: center;
+    }
+
+    .start__box { 
+        padding: 80px 44px;
+    }
+
+    .start__title {
+        font-size: 26px;
+    }
+
+    .start__buttons {
+        display: block;
+        margin-left: 140px;
+        width: 100%;
+        padding-top: 8px;
+    }
+
+    .start__button {
+        padding: 8px;
+    }
+
+    .start,
+    .contact {
+        padding: 12px 24px;
+    }
+
+    .footer__columns {
+        margin: 0;
+        width: 100%;
+        justify-content: center;
+        height: 490px;
+    }
+
+    .footer__column {
+        width: 120px;
+        margin: 0;
+        padding: 0;
+    }
+
+    .footer__rows:last-child {
+        padding-right: 0;
+        margin-bottom: 16px;
+    }
+
+    .footer__rows {
+        padding-right: 50px;
+        text-align: center;
+        align-items: center;
+    }
+
+    .footer__container {
+        padding: 50px 100px;
+    }
+
+    .footer__logo {
+        padding-left: 50px;
+        padding-bottom: 26px;
+    }
+
+    .footer__logo--title {
+        font-size: 22px;
+    }
+
+    .footer__copyright {
+        font-size: 14px;
+    }
+
 }
-
